@@ -3,6 +3,8 @@
 
 Implemented smalltalk instance resolution enhancement suggested by Jose Antonio Illescas del Olmo.
 (We now use a thread local to cache instance, rather than lookup current thread.) 
+Backed out enhancement, however it did help reveal a logic error. We need to use current instance
+(this) class classloader to get Smalltalk instance.
 
 
 11/01/2011 Changes
